--- a/index.html
+++ b/index.html
@@ -186,11 +186,16 @@
         </div>
 
         <footer class="footer">
-          <div class="small muted" data-i18n="footer1">Upload this folder to GitHub Pages to learn anywhere.</div>
+          <div class="small muted" data-i18n="footer1"></div>
           <div class="small muted" data-i18n="footer2">Progress is stored locally in your browser.</div>
         </footer>
       </main>
     </div>
   </div>
+
+  <footer class="appFooter">
+    © 2026 Bonny Design. All rights reserved.
+  </footer>
+
 </body>
 </html>
